# Extraction-point

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backup/: database.rs  file_backup.rs  mod.rs  settings.rs
src/components/AddTaskPanel/: AddTaskPanel.module.css  AddTaskPanel.tsx
src/components/ProgressBar/: ProgressBar.module.css  ProgressBar.tsx
src/components/ProgressSection/: ProgressSection.module.css  ProgressSection.tsx
src/components/StatusSection/: StatusSection.module.css  StatusSection.tsx
src/components/TaskListPanel/: TaskListPanel.module.css  TaskListPanel.tsx
src/components/modals/AboutModal/: AboutModal.module.css  AboutModal.tsx
src/components/modals/EditModal/: EditModal.module.css  EditModal.tsx
src/components/modals/HeaderModal/: HeaderModal.module.css  HeaderModal.tsx
src/components/modals/SettingsModal/: SettingsModal.module.css  SettingsModal.tsx
src/components/panels/AddTaskPanel/: AddTaskPanel.module.css  AddTaskPanel.tsx
src/components/panels/ProgressBar/: ProgressBar.module.css  ProgressBar.tsx
src/components/panels/ProgressSection/: ProgressSection.module.css  ProgressSection.tsx
src/components/panels/StatusSection/: StatusSection.module.css
src/hooks/: useBackupProgress.ts  useBackupTasks.ts  useSelectDirectory.ts  useTheme.tsx
src/pages/MainPage/: MainPage.module.css  MainPage.tsx
(+4 files in other folders)
