[package]
name = "extraction_point"
version = "0.1.0"
description = "A Tauri app for file backups and transfers"
authors = ["Nevionn"]
edition = "2021"

[lib]
name = "extraction_point_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri-plugin-clipboard-manager = "2"
